--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
